# aquarius

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile
.github/workflows/: ci.yml
SceneMaker/: MapMaker.py  SceneMaker.py
assets/maps/: blackscreen.json  example.json  example.yaml  firstMap.yaml
assets/scene/: add.scene  intro.scene  intro.yaml  intro2.yaml  intro3.yaml  opening.scene  opening.yaml  template.yaml  test.scene
assets/sprites/: game_assets.xcf
assets/sprites/Characters/Aquarius/: aquarius.kra
assets/sprites/Characters/Father/: face.xcf  sprites.xcf
assets/sprites/Items/: items.kra
assets/sprites/Tiles/: tiles.xcf
assets/tiles/: tiles.xcf
src/: Action.cpp  Action.hpp  Map.cpp  Map.hpp  Save.cpp  Save.hpp  Scene.cpp  Scene.hpp  TextBox.cpp  TextBox.hpp  Tile.cpp  Tile.hpp  main.cpp
src/Action/: Action.hpp
src/Collidables/: CMakeLists.txt  Character.cpp  Character.hpp  CollisionEntity.cpp  CollisionEntity.hpp  Player.cpp  Player.hpp
src/Collidables/include/: Animation.hpp  Character.hpp  Collidables.hpp  CollisionEntity.hpp  Item.hpp  Player.hpp
src/Collidables/src/: Animation.cpp  Character.cpp  CollisionEntity.cpp  Item.cpp  Player.cpp
src/Editor/: CMakeLists.txt
src/Editor/include/: EditorManager.hpp  UI.hpp
src/Editor/src/: EditorManager.cpp  UI.cpp  main.cpp
src/Managers/: CMakeLists.txt  GameplayManager.cpp  GameplayManager.hpp  SceneManager.cpp  SceneManager.hpp
src/Managers/include/: GameplayManager.hpp  Managers.hpp  Map.hpp  Scene.hpp  SceneManager.hpp  Tile.hpp
src/Managers/src/: Action.cpp  GameplayManager.cpp  Map.cpp  Scene.cpp  SceneManager.cpp  Tile.cpp
src/UI/: CMakeLists.txt  Dialogue.cpp  Functions.hpp
src/UI/include/: Button.hpp  Dialogue.hpp  Inventory.hpp  UI.hpp
src/UI/src/: Button.cpp  Dialogue.cpp  Inventory.cpp
src/ui/: Button.cpp  Button.hpp  Dialogue.cpp  Dialogue.hpp
src/utils/: Json.cpp  Json.hpp  Yaml.hpp
